Add data-split notebook & connect to ssh script

--- a/notebooks/data-loader.ipynb
+++ b/notebooks/data-loader.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
     "import os\n",
+    "import random\n",
     "import numpy as np\n",
     "import datetime\n",
     "from typing import List, Tuple"
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -201,6 +202,154 @@
     "    line = next(file_gen)\n",
     "    if len(actions) % 500 == 0:\n",
     "        print(f\"Loaded {len(actions)} actions\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19820"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ids = [a.label for a in actions]\n",
+    "len(ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 4,\n",
+       " 5,\n",
+       " 6,\n",
+       " 7,\n",
+       " 8,\n",
+       " 9,\n",
+       " 10,\n",
+       " 11,\n",
+       " 13,\n",
+       " 15,\n",
+       " 17,\n",
+       " 19,\n",
+       " 20,\n",
+       " 22,\n",
+       " 23,\n",
+       " 25,\n",
+       " 28,\n",
+       " 29,\n",
+       " 30,\n",
+       " 31,\n",
+       " 32,\n",
+       " 33,\n",
+       " 34,\n",
+       " 35,\n",
+       " 36,\n",
+       " 37,\n",
+       " 38,\n",
+       " 39,\n",
+       " 40,\n",
+       " 41,\n",
+       " 42,\n",
+       " 43,\n",
+       " 44,\n",
+       " 45,\n",
+       " 46,\n",
+       " 47,\n",
+       " 48,\n",
+       " 49,\n",
+       " 50,\n",
+       " 51}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 0,\n",
+       " 2: 1,\n",
+       " 3: 2,\n",
+       " 4: 3,\n",
+       " 5: 4,\n",
+       " 6: 5,\n",
+       " 7: 6,\n",
+       " 8: 7,\n",
+       " 9: 8,\n",
+       " 10: 9,\n",
+       " 11: 10,\n",
+       " 13: 11,\n",
+       " 15: 12,\n",
+       " 17: 13,\n",
+       " 19: 14,\n",
+       " 20: 15,\n",
+       " 22: 16,\n",
+       " 23: 17,\n",
+       " 25: 18,\n",
+       " 28: 19,\n",
+       " 29: 20,\n",
+       " 30: 21,\n",
+       " 31: 22,\n",
+       " 32: 23,\n",
+       " 33: 24,\n",
+       " 34: 25,\n",
+       " 35: 26,\n",
+       " 36: 27,\n",
+       " 37: 28,\n",
+       " 38: 29,\n",
+       " 39: 30,\n",
+       " 40: 31,\n",
+       " 41: 32,\n",
+       " 42: 33,\n",
+       " 43: 34,\n",
+       " 44: 35,\n",
+       " 45: 36,\n",
+       " 46: 37,\n",
+       " 47: 38,\n",
+       " 48: 39,\n",
+       " 49: 40,\n",
+       " 50: 41,\n",
+       " 51: 42}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_dict = dict()\n",
+    "for i, label in enumerate(set(ids)):\n",
+    "    label_dict[label] = i\n",
+    "label_dict"
    ]
   },
   {
@@ -413,6 +562,91 @@
     "    print(labels.size())\n",
     "    break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Splited 19820 files (80.0/20.0)\n",
+      "  Train: 15856\n",
+      "  Test: 3964\n",
+      "DONE\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_folder = \"../data/exports/actions-single-subject-all-POS_2020-04-29T15:15:27.384264\"\n",
+    "\n",
+    "data_files = os.listdir(input_folder)\n",
+    "random.seed(42)\n",
+    "random.shuffle(data_files)\n",
+    "\n",
+    "train_size, test_size = 0.80, 0.20\n",
+    "assert train_size + test_size == 1\n",
+    "\n",
+    "split_indx = int(train_size * len(data_files))\n",
+    "\n",
+    "train_files = data_files[:split_indx]\n",
+    "test_files = data_files[split_indx:]\n",
+    "\n",
+    "print(f\"Splited {len(data_files)} files ({train_size * 100}/{test_size * 100})\\n  Train: {len(train_files)}\\n  Test: {len(test_files)}\")\n",
+    "\n",
+    "export_folder_train = input_folder + \"-train\"\n",
+    "export_folder_test = input_folder + \"-test\"\n",
+    "os.mkdir(export_folder_train)\n",
+    "os.mkdir(export_folder_test)\n",
+    "\n",
+    "for file_name in train_files:\n",
+    "    os.rename(\n",
+    "        os.path.join(input_folder, file_name),\n",
+    "        os.path.join(export_folder_train, file_name)\n",
+    "    )\n",
+    "\n",
+    "for file_name in test_files:\n",
+    "    os.rename(\n",
+    "        os.path.join(input_folder, file_name),\n",
+    "        os.path.join(export_folder_test, file_name)\n",
+    "    )\n",
+    "\n",
+    "print(\"DONE\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder = \"../data/exports/2020-05-08T12:23:23.327925/cross-subject/train\"\n",
+    "file_example = os.listdir(folder)[0]\n",
+    "with open(os.path.join(folder, file_example), \"r\") as df:\n",
+    "    data = df.read().rstrip(\"\\n\").split(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'#objectKey messif.objects.keys.AbstractObjectKey 0238-L_5_2599_114'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0]"
+   ]
   }
  ],
  "metadata": {
@@ -431,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
