Add cumulative evaluation

--- a/notebooks/precision-recall.ipynb
+++ b/notebooks/precision-recall.ipynb
@@ -332,37 +332,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### LOAD PREDICTIONS\n",
-    "import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "GROUND_TRUTH = \"ground-truth\"\n",
-    "PREDICTION = \"prediction\"\n",
-    "SEQ_LENGTH = \"seq-length\"\n",
-    "\n",
-    "\n",
-    "def default_value():\n",
-    "    return {\n",
-    "        GROUND_TRUTH: [],\n",
-    "        PREDICTION: [],\n",
-    "        SEQ_LENGTH: 0\n",
-    "    }\n",
-    "\n",
-    "pred = pickle.load(open('../data/predictions_2021-05-16T12:22:03.722505.p', 'rb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -496,10 +465,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "####### Calculate Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### LOAD PREDICTIONS\n",
+    "import os\n",
+    "import pickle\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GROUND_TRUTH = \"ground-truth\"\n",
+    "PREDICTION = \"prediction\"\n",
+    "SEQ_LENGTH = \"seq-length\"\n",
+    "\n",
+    "\n",
+    "def default_value():\n",
+    "    return {\n",
+    "        GROUND_TRUTH: [],\n",
+    "        PREDICTION: [],\n",
+    "        SEQ_LENGTH: 0\n",
+    "    }\n",
+    "\n",
+    "#pred = pickle.load(open('../data/predictions_2021-05-16T12:22:03.722505.p', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['predictions_30_2021_05_17-19_45_15.p',\n",
+       " 'predictions_100_2021_05_17-20_33_50.p',\n",
+       " 'predictions_80_2021_05_17-20_20_06.p',\n",
+       " 'predictions_60_2021_05_17-20_06_05.p',\n",
+       " 'predictions_40_2021_05_17-19_52_10.p',\n",
+       " 'predictions_70_2021_05_17-20_13_03.p',\n",
+       " 'predictions_50_2021_05_17-19_59_03.p',\n",
+       " 'predictions_10_2021_05_17-19_31_14.p',\n",
+       " 'predictions_90_2021_05_17-20_26_58.p',\n",
+       " 'predictions_20_2021_05_17-19_38_10.p']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "folder = '../output_models/cross_subject-batch_1_lr_0001_rs_overlap_2021_03_04-14_47_39/'\n",
+    "\n",
+    "file_predictions = list(filter(lambda x: x.endswith('.p'), os.listdir(folder)))\n",
+    "file_predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pfile = file_predictions[0]\n",
+    "\n",
+    "data = pickle.load(open(os.path.join(folder, pfile), 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "collections.defaultdict"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['0291-L', '0291-M', '0291-R', '0292-L', '0292-M', '0292-R', '0293-L', '0293-M', '0293-R', '0294-L', '0294-M', '0294-R', '0295-L', '0295-M', '0295-R', '0296-L', '0296-M', '0296-R', '0297-L', '0297-M', '0297-R', '0298-L', '0298-M', '0298-R', '0301-L', '0301-M', '0301-R', '0302-L', '0302-M', '0302-R', '0303-L', '0303-M', '0303-R', '0304-L', '0304-M', '0304-R', '0305-L', '0305-M', '0305-R', '0306-L', '0306-M', '0306-R', '0307-L', '0307-M', '0307-R', '0308-L', '0308-M', '0308-R', '0311-L', '0311-M', '0311-R', '0312-L', '0312-M', '0312-R', '0313-L', '0313-M', '0313-R', '0314-L', '0314-M', '0314-R', '0315-L', '0315-M', '0315-R', '0316-L', '0316-M', '0316-R', '0317-L', '0317-M', '0317-R', '0318-L', '0318-M', '0318-R', '0321-L', '0321-M', '0321-R', '0322-L', '0322-M', '0322-R', '0323-L', '0323-M', '0323-R', '0324-L', '0324-M', '0324-R', '0325-L', '0325-M', '0325-R', '0326-L', '0326-M', '0326-R', '0327-L', '0327-M', '0327-R', '0328-L', '0328-M', '0328-R', '0331-L', '0331-M', '0331-R', '0332-L', '0332-M', '0332-R', '0333-L', '0333-M', '0333-R', '0334-L', '0334-M', '0334-R'])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['ground-truth', 'prediction', 'seq-length'])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['0291-L'].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.argmax(data['0291-L']['prediction'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.8459190e-03, 1.1553781e-02, 7.4541368e-02, 8.0316830e-03,\n",
+       "        2.6821257e-03, 1.3154967e-03, 1.4384463e-04, 2.4321429e-02,\n",
+       "        3.9683646e-03, 7.6341722e-03, 1.6967366e-03, 1.9604236e-02,\n",
+       "        1.0788281e-03, 1.4819030e-03, 2.6515848e-03, 4.7615566e-03,\n",
+       "        7.8955851e-03, 1.9214547e-03, 2.8833842e-02, 3.6492009e-02,\n",
+       "        6.8346667e-03, 5.6670909e-04, 1.6281529e-03, 3.0740950e-02,\n",
+       "        1.4514944e-03, 1.2861119e-03, 5.3657662e-02, 6.0573067e-03,\n",
+       "        2.6825426e-02, 1.8227920e-02, 5.2449438e-03, 2.5670584e-03,\n",
+       "        3.4110632e-02, 6.2723183e-03, 7.5275227e-03, 2.2157770e-02,\n",
+       "        4.2854827e-03, 9.1887795e-04, 1.7055763e-01, 9.9727316e-03,\n",
+       "        2.4460428e-03, 8.7177136e-04, 1.9786591e-03]], dtype=float32)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['0291-L']['prediction'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L-GT: 272166\n",
+      "L-PR: 272166\n"
+     ]
+    }
+   ],
+   "source": [
+    "# concatenate all predictions from all sequences\n",
+    "gt = []\n",
+    "pr = []\n",
+    "for _, v in data.items():\n",
+    "    gt += v['ground-truth']\n",
+    "    pr += [np.argmax(p) for p in v['prediction']]\n",
+    "    \n",
+    "print(f'L-GT: {len(gt)}')\n",
+    "print(f'L-PR: {len(pr)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25608268483205104"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(gt, pr)"
+   ]
   }
  ],
  "metadata": {
